--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,6 +37,6 @@ jobs:
             -p 3000:3000 \
             -p 3001:3001 \
             --name tasteofkorea \
-            -e STRIPE_SECRET_KEY=REMOVED51RcxYTRIZ0vIX0iB7mnsVZX7lexnV7H7ecairRtgYWFw7kcJH4cR53C5SdTR35rZsL2n8uoWtoNH7EG6P8pHDBq500bGCzyWrU \
+            -e STRIPE_SECRET_KEY=${{ secrets.STRIPE_SECRET_KEY }} \
             -v ~/tasteofkorea_kisok/db.sqlite:/app/db.sqlite \
             tasteofkorea-image
